<resources>
    <string name="app_name">记账</string>
    <string name="writeANote">记一笔</string>
    <string name="ti_balance">结余</string>
    <string name="ti_income">收入</string>
    <string name="ti_expenditure">支出</string>
    <string name="detail">查看明细</string>
    <string name="ti_amount">金额</string>
    <string name="ti_item">项目</string>
    <string name="ti_date">日期</string>
    <string name="ti_remark">备注</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="title_activity_add_test">AddTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>